--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -1,9 +1,10 @@
 .block {
     width: 100%;
-    height: 60px;
-    font-size: 32px;
+    height: 120px;
+    font-size: 50px;
     text-align: center;
-    line-height: 60px;
+    line-height: 120px;
     background-color: #d2d3d5;
     color: #272727;
+    margin-bottom: 8px;
 }
