--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -1,10 +1,9 @@
 .block {
-    width: 100%;
+    width: auto;
     height: 120px;
     font-size: 50px;
     text-align: center;
     line-height: 120px;
     background-color: #d2d3d5;
     color: #272727;
-    margin-bottom: 8px;
 }
